--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </div>
 
     <div class="footer">
-        📧 البريد الإلكتروني: choutech99@gmail.com | ☎️ الهاتف: 0541706586<br>
+        📧 البريد الإلكتروني: cschool.dzaiar@gmail.com | ☎️ الهاتف: 0541706586<br>
         &copy; 2025 C School. جميع الحقوق محفوظة.
     </div>
 </body>
