--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
                         target="_blank">📱 تحميل تطبيق الاندرويد</a>
                     <a class="btn-download" href="https://www.mediafire.com/file/nevxm03tt6avb27/AnyDesk.exe/file"
                         target="_blank">🛠️ تحميل Anydesk للدعم</a>
+                    <a class="btn-download" href="https://youtu.be/p9oFIBwfG6c?si=RkZJRlwuG7AMB0RA" 
+                        target="_blank"> ▶️ شاهد شرح اليوتيوب </a>
                 </div>
 
             </div>
