--- a/index.html
+++ b/index.html
@@ -140,7 +140,112 @@
         </div>
     </div>
 
-    <div style="text-align: center; padding: 40px 20px; background-color: #f9f9f9;">
+
+                <!-- Plan 1 -->
+            <div
+                style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
+                <h3 style="color: #9c7dfb;">دروس شهرية</h3>
+                <ul style="padding-right: 20px; list-style: none;">
+                    <li>✅ الحضور والغياب عن طريق الكودبار</li>
+                    <li>✅ بطاقات التلاميذ</li>
+                    <li>✅ حساب أجور الأساتذة</li>
+                    <li>✅ دفع أجرة الموظفين</li>
+                    <li>✅ ديون الأساتذة</li>
+                    <li>✅ الدفعات المتأخرة للتلاميذ</li>
+                    <li>✅ إشعارات انتهاء الدفع</li>
+                    <li>✅ حساب الحصص المتبقية</li>
+                    <li>✅ تقارير العمل والدفع</li>
+                    <li>✅ دفع فوج مباشر</li>
+                    <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
+                    <li>✅ حساب الفوائد وتحليل الربح</li>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                </ul>
+                <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 20000DA</p>
+            </div>
+
+            <!-- Plan 2 -->
+            <div
+                style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
+                <h3 style="color: #9c7dfb;">دروس شهرية + دورات</h3>
+                <ul style="padding-right: 20px; list-style: none;">
+                    <li>✅ الحضور والغياب عن طريق الكودبار</li>
+                    <li>✅ بطاقات التلاميذ</li>
+                    <li>✅ حساب أجور الأساتذة</li>
+                    <li>✅ دفع أجرة الموظفين</li>
+                    <li>✅ ديون الأساتذة</li>
+                    <li>✅ الدفعات المتأخرة للتلاميذ</li>
+                    <li>✅ إشعارات انتهاء الدفع</li>
+                    <li>✅ حساب الحصص المتبقية</li>
+                    <li>✅ تقارير العمل والدفع</li>
+                    <li>✅ دفع فوج مباشر</li>
+                    <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
+                    <li>✅ حساب الفوائد وتحليل الربح</li>
+                    <li>✅ دفع حقوق الدورات بالفترة</li>
+                    <li>✅ تسجيل في الدورات</li>
+                    <br>
+                    <br>
+                    <br>
+                </ul>
+                <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 25000DA</p>
+            </div>
+
+            <!-- Plan 3 -->
+            <div
+                style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
+                <h3 style="color: #9c7dfb;">دروس شهرية + تطبيق حضور</h3>
+                <ul style="padding-right: 20px; list-style: none;">
+                    <li>✅ الحضور والغياب عن طريق الكودبار</li>
+                    <li>✅ بطاقات التلاميذ</li>
+                    <li>✅ حساب أجور الأساتذة</li>
+                    <li>✅ دفع أجرة الموظفين</li>
+                    <li>✅ ديون الأساتذة</li>
+                    <li>✅ الدفعات المتأخرة للتلاميذ</li>
+                    <li>✅ إشعارات انتهاء الدفع</li>
+                    <li>✅ حساب الحصص المتبقية</li>
+                    <li>✅ تقارير العمل والدفع</li>
+                    <li>✅ دفع فوج مباشر</li>
+                    <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
+                    <li>✅ تسجيل الحضور والغياب بتطبيق خاص بالأساتذة</li>
+                    <li>✅ مراقبة قائمة الحضور للأساتذة</li>
+                    <li>✅ حساب الفوائد وتحليل الربح</li>
+                    <br>
+                    <br>
+                </ul>
+                <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 30000DA</p>
+            </div>
+
+            <!-- Plan 4 -->
+            <div
+                style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
+                <h3 style="color: #9c7dfb;">دروس + حضور + دورات</h3>
+                <ul style="padding-right: 20px; list-style: none;">
+                    <li>✅ الحضور والغياب عن طريق الكودبار</li>
+                    <li>✅ بطاقات التلاميذ</li>
+                    <li>✅ حساب أجور الأساتذة</li>
+                    <li>✅ دفع أجرة الموظفين</li>
+                    <li>✅ ديون الأساتذة</li>
+                    <li>✅ الدفعات المتأخرة للتلاميذ</li>
+                    <li>✅ إشعارات انتهاء الدفع</li>
+                    <li>✅ حساب الحصص المتبقية</li>
+                    <li>✅ تقارير العمل والدفع</li>
+                    <li>✅ دفع فوج مباشر</li>
+                    <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
+                    <li>✅ دفع حقوق الدورات بالفترة</li>
+                    <li>✅ تسجيل في الدورات</li>
+                    <li>✅ تسجيل الحضور والغياب بتطبيق خاص بالأساتذة</li>
+                    <li>✅ مراقبة قائمة الحضور للأساتذة</li>
+                    <li>✅ حساب الفوائد وتحليل الربح</li>
+                </ul>
+                <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 35000DA</p>
+            </div>
+
+        </div>
+    </div>
+        <div style="text-align: center; padding: 40px 20px; background-color: #f9f9f9;">
         <h3>من بعض زبائننا:</h3>
         <div
             style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 20px; margin-top: 20px;">
@@ -155,7 +260,6 @@
             <!-- زيد الصور لي تحب -->
         </div>
     </div>
-
     <div class="footer">
         📧 البريد الإلكتروني: cschool.dzaiar@gmail.com | ☎️ الهاتف: 0541706586<br>
         &copy; 2025 C School. جميع الحقوق محفوظة.
