--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                         target="_blank">📱 تحميل تطبيق الاندرويد</a>
                     <a class="btn-download" href="https://www.mediafire.com/file/nevxm03tt6avb27/AnyDesk.exe/file"
                         target="_blank">🛠️ تحميل Anydesk للدعم</a>
-                    <a class="btn-download" href="https://youtu.be/p9oFIBwfG6c?si=RkZJRlwuG7AMB0RA" 
-                        target="_blank"> ▶️ شاهد شرح اليوتيوب </a>
+                    <a class="btn-download" href="https://youtu.be/p9oFIBwfG6c?si=RkZJRlwuG7AMB0RA" target="_blank"> ▶️
+                        شاهد شرح اليوتيوب </a>
                 </div>
 
             </div>
@@ -140,8 +140,11 @@
         </div>
     </div>
 
+    <div style="text-align: center; padding: 40px 20px; background-color: #fff;">
+        <h2 style="color: #9c7dfb;">💡 الباقات والأسعار</h2>
+        <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px;">
 
-                <!-- Plan 1 -->
+            <!-- Plan 1 -->
             <div
                 style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
                 <h3 style="color: #9c7dfb;">دروس شهرية</h3>
@@ -245,7 +248,8 @@
 
         </div>
     </div>
-        <div style="text-align: center; padding: 40px 20px; background-color: #f9f9f9;">
+
+    <div style="text-align: center; padding: 40px 20px; background-color: #f9f9f9;">
         <h3>من بعض زبائننا:</h3>
         <div
             style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 20px; margin-top: 20px;">
@@ -260,6 +264,7 @@
             <!-- زيد الصور لي تحب -->
         </div>
     </div>
+
     <div class="footer">
         📧 البريد الإلكتروني: cschool.dzaiar@gmail.com | ☎️ الهاتف: 0541706586<br>
         &copy; 2025 C School. جميع الحقوق محفوظة.
