--- a/index.html
+++ b/index.html
@@ -96,6 +96,68 @@
             color: #888;
             background-color: #f0f0f0;
         }
+
+        /* قسم المعرض */
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            margin-top: 20px;
+        }
+
+        .gallery img {
+            max-width: 180px;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: transform 0.3s;
+            border: 2px solid #ddd;
+        }
+
+        .gallery img:hover {
+            transform: scale(1.05);
+            border-color: #9c7dfb;
+        }
+
+        #lightbox {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            text-align: center;
+            padding-top: 60px;
+        }
+
+        #lightbox img {
+            max-width: 90%;
+            max-height: 80vh;
+            border-radius: 10px;
+        }
+
+        #lightbox .close {
+            position: absolute;
+            top: 20px;
+            right: 40px;
+            color: white;
+            font-size: 40px;
+            cursor: pointer;
+        }
+
+        .gallery img.horizontal {
+            width: 220px;
+            height: 130px;
+            object-fit: cover;
+        }
+
+        .gallery img.vertical {
+            width: 120px;
+            height: 200px;
+            object-fit: cover;
+        }
     </style>
 </head>
 
@@ -106,27 +168,21 @@
 
     <div class="main-section">
         <img src="image.png" alt="C School App Preview">
-
         <div class="info">
             <p class="description">
                 تطبيق متكامل لتسيير الحضور، إدارة الأفواج، وتحليل التقارير التعليمية، يعمل بكفاءة حتى بدون اتصال
                 بالإنترنت.
             </p>
-
             <div class="buttons">
-                <div class="buttons">
-                    <a class="btn-download" href="https://www.mediafire.com/file/jyjapg2hnjze24i/mysetup.exe/file"
-                        target="_blank">💻 تحميل النسخة التجريبية</a>
-                    <a class="btn-download" href="https://www.mediafire.com/file/45a5zm3hlwk9z70/app-release.apk/file"
-                        target="_blank">📱 تحميل تطبيق الاندرويد</a>
-                    <a class="btn-download" href="https://www.mediafire.com/file/nevxm03tt6avb27/AnyDesk.exe/file"
-                        target="_blank">🛠️ تحميل Anydesk للدعم</a>
-                    <a class="btn-download" href="https://youtu.be/p9oFIBwfG6c?si=RkZJRlwuG7AMB0RA" target="_blank"> ▶️
-                        شاهد شرح اليوتيوب </a>
-                </div>
-
+                <a class="btn-download" href="https://www.mediafire.com/file/jyjapg2hnjze24i/mysetup.exe/file"
+                    target="_blank">💻 تحميل النسخة التجريبية</a>
+                <a class="btn-download" href="https://www.mediafire.com/file/45a5zm3hlwk9z70/app-release.apk/file"
+                    target="_blank">📱 تحميل تطبيق الاندرويد</a>
+                <a class="btn-download" href="https://www.mediafire.com/file/nevxm03tt6avb27/AnyDesk.exe/file"
+                    target="_blank">🛠️ تحميل Anydesk للدعم</a>
+                <a class="btn-download" href="https://youtu.be/p9oFIBwfG6c?si=RkZJRlwuG7AMB0RA" target="_blank"> ▶️ شاهد
+                    شرح اليوتيوب </a>
             </div>
-
             <div class="features">
                 <h3>مميزات التطبيق:</h3>
                 <ul>
@@ -138,6 +194,32 @@
                 </ul>
             </div>
         </div>
+    </div>
+
+    <!-- المعرض -->
+    <div style="text-align: center; padding: 40px 20px; background-color: #fff;">
+        <h2 style="color: #9c7dfb;">📸 من داخل البرنامج والتطبيق</h2>
+        <div class="gallery">
+            <!-- صور البرنامج (مستطيل أفقي) -->
+            <img src="A1.png" alt="صورة من البرنامج" class="horizontal" onclick="openLightbox(this)">
+            <img src="A2.png" alt="صورة من البرنامج" class="horizontal" onclick="openLightbox(this)">
+            <img src="A3.png" alt="صورة من البرنامج" class="horizontal" onclick="openLightbox(this)">
+            <img src="A4.png" alt="صورة من البرنامج" class="horizontal" onclick="openLightbox(this)">
+            <img src="A8.png" alt="صورة من البرنامج" class="horizontal" onclick="openLightbox(this)">
+
+            <!-- صور التطبيق (مستطيل عمودي) -->
+            <img src="P1.png" alt="صورة من التطبيق" class="vertical" onclick="openLightbox(this)">
+            <img src="P2.png" alt="صورة من التطبيق" class="vertical" onclick="openLightbox(this)">
+            <img src="P3.png" alt="صورة من التطبيق" class="vertical" onclick="openLightbox(this)">
+        </div>
+
+    </div>
+
+
+    <!-- نافذة التكبير -->
+    <div id="lightbox" onclick="closeLightbox()">
+        <span class="close">&times;</span>
+        <img id="lightbox-img">
     </div>
 
     <div style="text-align: center; padding: 40px 20px; background-color: #fff;">
@@ -269,6 +351,17 @@
         📧 البريد الإلكتروني: cschool.dzaiar@gmail.com | ☎️ الهاتف: 0541706586<br>
         &copy; 2025 C School. جميع الحقوق محفوظة.
     </div>
+
+    <script>
+        function openLightbox(img) {
+            document.getElementById('lightbox-img').src = img.src;
+            document.getElementById('lightbox').style.display = 'block';
+        }
+
+        function closeLightbox() {
+            document.getElementById('lightbox').style.display = 'none';
+        }
+    </script>
 </body>
 
 </html>
