--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
                     target="_blank">📱 تحميل تطبيق الاندرويد</a>
                 <a class="btn-download" href="https://www.mediafire.com/file/nevxm03tt6avb27/AnyDesk.exe/file"
                     target="_blank">🛠️ تحميل Anydesk للدعم</a>
-                <a class="btn-download" href="https://youtu.be/p9oFIBwfG6c?si=RkZJRlwuG7AMB0RA" target="_blank"> ▶️ شاهد
-                    شرح اليوتيوب </a>
+                 <a class="btn-download" href="https://youtu.be/TT1-ScNfOhg?si=2v2KuqkIDcmyitBH" target="_blank"> ▶️ طريقة تثبيت النسخة التجريبية </a>
             </div>
             <div class="features">
                 <h3>مميزات التطبيق:</h3>
