--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
                     target="_blank">📱 تحميل تطبيق الاندرويد</a>
                 <a class="btn-download" href="https://www.mediafire.com/file/nevxm03tt6avb27/AnyDesk.exe/file"
                     target="_blank">🛠️ تحميل Anydesk للدعم</a>
-                 <a class="btn-download" href="https://youtu.be/TT1-ScNfOhg?si=2v2KuqkIDcmyitBH" target="_blank"> ▶️ طريقة تثبيت النسخة التجريبية </a>
+                 <a class="btn-download" href="https://youtu.be/TT1-ScNfOhg?si=2v2KuqkIDcmyitBH" target="_blank"> 
+                 ▶️ تثبيت النسخة التجريبية </a>
             </div>
             <div class="features">
                 <h3>مميزات التطبيق:</h3>
