--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
                 بالإنترنت.
             </p>
             <div class="buttons">
-                <a class="btn-download" href="https://www.mediafire.com/file/jyjapg2hnjze24i/mysetup.exe/file"
+                <a class="btn-download" href="https://www.mediafire.com/file/b6y1w0cqrxdywcx/mysetup.exe/file"
                     target="_blank">💻 تحميل النسخة التجريبية</a>
                 <a class="btn-download" href="https://www.mediafire.com/file/45a5zm3hlwk9z70/app-release.apk/file"
                     target="_blank">📱 تحميل تطبيق الاندرويد</a>
                 <a class="btn-download" href="https://www.mediafire.com/file/nevxm03tt6avb27/AnyDesk.exe/file"
                     target="_blank">🛠️ تحميل Anydesk للدعم</a>
-                 <a class="btn-download" href="https://youtu.be/TT1-ScNfOhg?si=2v2KuqkIDcmyitBH" target="_blank"> 
-                 ▶️ تثبيت النسخة التجريبية </a>
+                <a class="btn-download" href="https://youtu.be/p9oFIBwfG6c?si=RkZJRlwuG7AMB0RA" target="_blank"> ▶️ شاهد
+                    شرح اليوتيوب </a>
             </div>
             <div class="features">
                 <h3>مميزات التطبيق:</h3>
@@ -229,10 +229,12 @@
             <!-- Plan 1 -->
             <div
                 style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
-                <h3 style="color: #9c7dfb;">دروس شهرية</h3>
+                <h3 style="color: #9c7dfb;">دروس شهرية + دروس يومية</h3>
                 <ul style="padding-right: 20px; list-style: none;">
                     <li>✅ الحضور والغياب عن طريق الكودبار</li>
                     <li>✅ بطاقات التلاميذ</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية</li>
+                    <li>✅ تسجيل التلاميذ في الدروس اليومية</li>
                     <li>✅ حساب أجور الأساتذة</li>
                     <li>✅ دفع أجرة الموظفين</li>
                     <li>✅ ديون الأساتذة</li>
@@ -242,12 +244,11 @@
                     <li>✅ تقارير العمل والدفع</li>
                     <li>✅ دفع فوج مباشر</li>
                     <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
+                    <li>✅ مراقبة قائمة الحضور للأساتذة</li>
                     <li>✅ حساب الفوائد وتحليل الربح</li>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
+                    <li>❌ دفع حقوق الدورات بالفترة</li>
+                    <li>❌ تسجيل في الدورات</li>
+                    <li>❌ تطبيق لتسجيل الحضور والغياب </li>
                 </ul>
                 <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 20000DA</p>
             </div>
@@ -255,10 +256,12 @@
             <!-- Plan 2 -->
             <div
                 style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
-                <h3 style="color: #9c7dfb;">دروس شهرية + دورات</h3>
+                <h3 style="color: #9c7dfb;">دروس شهرية + دورات + دروس يومية</h3>
                 <ul style="padding-right: 20px; list-style: none;">
                     <li>✅ الحضور والغياب عن طريق الكودبار</li>
                     <li>✅ بطاقات التلاميذ</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية</li>
+                    <li>✅ تسجيل التلاميذ في الدروس اليومية</li>
                     <li>✅ حساب أجور الأساتذة</li>
                     <li>✅ دفع أجرة الموظفين</li>
                     <li>✅ ديون الأساتذة</li>
@@ -268,48 +271,25 @@
                     <li>✅ تقارير العمل والدفع</li>
                     <li>✅ دفع فوج مباشر</li>
                     <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
+                    <li>✅ مراقبة قائمة الحضور للأساتذة</li>
                     <li>✅ حساب الفوائد وتحليل الربح</li>
                     <li>✅ دفع حقوق الدورات بالفترة</li>
                     <li>✅ تسجيل في الدورات</li>
-                    <br>
-                    <br>
-                    <br>
+                    <li>❌ تطبيق لتسجيل الحضور والغياب </li>
                 </ul>
                 <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 25000DA</p>
-            </div>
-
-            <!-- Plan 3 -->
-            <div
-                style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
-                <h3 style="color: #9c7dfb;">دروس شهرية + تطبيق حضور</h3>
-                <ul style="padding-right: 20px; list-style: none;">
-                    <li>✅ الحضور والغياب عن طريق الكودبار</li>
-                    <li>✅ بطاقات التلاميذ</li>
-                    <li>✅ حساب أجور الأساتذة</li>
-                    <li>✅ دفع أجرة الموظفين</li>
-                    <li>✅ ديون الأساتذة</li>
-                    <li>✅ الدفعات المتأخرة للتلاميذ</li>
-                    <li>✅ إشعارات انتهاء الدفع</li>
-                    <li>✅ حساب الحصص المتبقية</li>
-                    <li>✅ تقارير العمل والدفع</li>
-                    <li>✅ دفع فوج مباشر</li>
-                    <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
-                    <li>✅ تسجيل الحضور والغياب بتطبيق خاص بالأساتذة</li>
-                    <li>✅ مراقبة قائمة الحضور للأساتذة</li>
-                    <li>✅ حساب الفوائد وتحليل الربح</li>
-                    <br>
-                    <br>
-                </ul>
-                <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 30000DA</p>
             </div>
 
             <!-- Plan 4 -->
             <div
                 style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
-                <h3 style="color: #9c7dfb;">دروس + حضور + دورات</h3>
+                <h3 style="color: #9c7dfb;">دروس + تطبيق + دورات</h3>
                 <ul style="padding-right: 20px; list-style: none;">
                     <li>✅ الحضور والغياب عن طريق الكودبار</li>
                     <li>✅ بطاقات التلاميذ</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية</li>
+                    <li>✅ تسجيل التلاميذ في الدروس اليومية</li>
+                    <li>✅ تطبيق لتسجيل الحضور والغياب </li>
                     <li>✅ حساب أجور الأساتذة</li>
                     <li>✅ دفع أجرة الموظفين</li>
                     <li>✅ ديون الأساتذة</li>
@@ -318,10 +298,9 @@
                     <li>✅ حساب الحصص المتبقية</li>
                     <li>✅ تقارير العمل والدفع</li>
                     <li>✅ دفع فوج مباشر</li>
-                    <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
                     <li>✅ دفع حقوق الدورات بالفترة</li>
                     <li>✅ تسجيل في الدورات</li>
-                    <li>✅ تسجيل الحضور والغياب بتطبيق خاص بالأساتذة</li>
+                    <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
                     <li>✅ مراقبة قائمة الحضور للأساتذة</li>
                     <li>✅ حساب الفوائد وتحليل الربح</li>
                 </ul>
