--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                 بالإنترنت.
             </p>
             <div class="buttons">
-                <a class="btn-download" href="https://www.mediafire.com/file/jyjapg2hnjze24i/mysetup.exe/file"
-                    target="_blank">💻 تحميل النسخة التجريبية</a>
                 <a class="btn-download" href="https://www.mediafire.com/file/isolqdgglu4aqso/mysetup.exe/file"
+                    target="_blank">💻 تحميل النسخة التجريبية</a>
+                <a class="btn-download" href="https://www.mediafire.com/file/45a5zm3hlwk9z70/app-release.apk/file"
                     target="_blank">📱 تحميل تطبيق الاندرويد</a>
                 <a class="btn-download" href="https://www.mediafire.com/file/nevxm03tt6avb27/AnyDesk.exe/file"
                     target="_blank">🛠️ تحميل Anydesk للدعم</a>
