--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 <body>
     <div class="header">
         <h1>حمّل تطبيق C School</h1>
+
     </div>
 
     <div class="main-section">
@@ -174,7 +175,7 @@
                 بالإنترنت.
             </p>
             <div class="buttons">
-                <a class="btn-download" href="https://www.mediafire.com/file/qpna92nb63nbihs/mysetup.exe/file"
+                <a class="btn-download" href="https://www.mediafire.com/file/jyjapg2hnjze24i/mysetup.exe/file"
                     target="_blank">💻 تحميل النسخة التجريبية</a>
                 <a class="btn-download" href="https://www.mediafire.com/file/45a5zm3hlwk9z70/app-release.apk/file"
                     target="_blank">📱 تحميل تطبيق الاندرويد</a>
@@ -182,6 +183,15 @@
                     target="_blank">🛠️ تحميل Anydesk للدعم</a>
                 <a class="btn-download" href="https://youtu.be/p9oFIBwfG6c?si=RkZJRlwuG7AMB0RA" target="_blank"> ▶️ شاهد
                     شرح اليوتيوب </a>
+            </div>
+            <div style="text-align: center; padding: 40px 20px;">
+                <h2 style="color: #9c7dfb;">🎥 طريقة التحميل والتثبيت</h2>
+                <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;">
+                    <iframe
+                        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 12px; border: none;"
+                        src="https://www.youtube.com/embed/p9oFIBwfG6c" title="طريقة التحميل والتثبيت"
+                        allowfullscreen></iframe>
+                </div>
             </div>
             <div class="features">
                 <h3>مميزات التطبيق:</h3>
