--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;">
                     <iframe
                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 12px; border: none;"
-                        src="https://youtu.be/-GancyZTbFM?si=9QNVE8Fx7-Py3uR8" title="طريقة التحميل والتثبيت"
+                        src="https://youtu.be/-GancyZTbFM?si=ZCtE6zxdvnvR9mTJ" title="طريقة التحميل والتثبيت"
                         allowfullscreen></iframe>
                 </div>
             </div>
