--- a/index.html
+++ b/index.html
@@ -236,15 +236,14 @@
         <h2 style="color: #9c7dfb;">💡 الباقات والأسعار</h2>
         <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px;">
 
+
             <!-- Plan 1 -->
             <div
                 style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
-                <h3 style="color: #9c7dfb;">دروس شهرية + دروس يومية</h3>
+                <h3 style="color: #9c7dfb;">دروس شهرية</h3>
                 <ul style="padding-right: 20px; list-style: none;">
                     <li>✅ الحضور والغياب عن طريق الكودبار</li>
                     <li>✅ بطاقات التلاميذ</li>
-                    <li>✅ تسجيل التلاميذ في الدروس الشهرية</li>
-                    <li>✅ تسجيل التلاميذ في الدروس اليومية</li>
                     <li>✅ حساب أجور الأساتذة</li>
                     <li>✅ دفع أجرة الموظفين</li>
                     <li>✅ ديون الأساتذة</li>
@@ -256,8 +255,37 @@
                     <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
                     <li>✅ مراقبة قائمة الحضور للأساتذة</li>
                     <li>✅ حساب الفوائد وتحليل الربح</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية فقط</li>
                     <li>❌ دفع حقوق الدورات بالفترة</li>
                     <li>❌ تسجيل في الدورات</li>
+                    <li>❌ تسجيل التلاميذ في الدروس اليومية</li
+                    <li>❌ تطبيق لتسجيل الحضور والغياب </li>
+                </ul>
+                <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 15000DA</p>
+            </div>
+
+            <!-- Plan 1 -->
+            <div
+                style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
+                <h3 style="color: #9c7dfb;">دروس شهرية + دورات </h3>
+                <ul style="padding-right: 20px; list-style: none;">
+                    <li>✅ الحضور والغياب عن طريق الكودبار</li>
+                    <li>✅ بطاقات التلاميذ</li>
+                    <li>✅ حساب أجور الأساتذة</li>
+                    <li>✅ دفع أجرة الموظفين</li>
+                    <li>✅ ديون الأساتذة</li>
+                    <li>✅ الدفعات المتأخرة للتلاميذ</li>
+                    <li>✅ إشعارات انتهاء الدفع</li>
+                    <li>✅ حساب الحصص المتبقية</li>
+                    <li>✅ تقارير العمل والدفع</li>
+                    <li>✅ دفع فوج مباشر</li>
+                    <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
+                    <li>✅ مراقبة قائمة الحضور للأساتذة</li>
+                    <li>✅ حساب الفوائد وتحليل الربح</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية فقط</li>
+                    <li>✅ دفع حقوق الدورات بالفترة</li>
+                    <li>✅ تسجيل في الدورات</li>
+                    <li>❌ تسجيل التلاميذ في الدروس اليومية</li
                     <li>❌ تطبيق لتسجيل الحضور والغياب </li>
                 </ul>
                 <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 20000DA</p>
@@ -270,8 +298,6 @@
                 <ul style="padding-right: 20px; list-style: none;">
                     <li>✅ الحضور والغياب عن طريق الكودبار</li>
                     <li>✅ بطاقات التلاميذ</li>
-                    <li>✅ تسجيل التلاميذ في الدروس الشهرية</li>
-                    <li>✅ تسجيل التلاميذ في الدروس اليومية</li>
                     <li>✅ حساب أجور الأساتذة</li>
                     <li>✅ دفع أجرة الموظفين</li>
                     <li>✅ ديون الأساتذة</li>
@@ -283,8 +309,10 @@
                     <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
                     <li>✅ مراقبة قائمة الحضور للأساتذة</li>
                     <li>✅ حساب الفوائد وتحليل الربح</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية فقط</li>
                     <li>✅ دفع حقوق الدورات بالفترة</li>
                     <li>✅ تسجيل في الدورات</li>
+                    <li>✅ تسجيل التلاميذ في الدروس اليومية</li
                     <li>❌ تطبيق لتسجيل الحضور والغياب </li>
                 </ul>
                 <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 25000DA</p>
@@ -295,11 +323,8 @@
                 style="border: 2px solid #9c7dfb; border-radius: 12px; padding: 20px; width: 280px; text-align: right;">
                 <h3 style="color: #9c7dfb;">دروس + تطبيق + دورات</h3>
                 <ul style="padding-right: 20px; list-style: none;">
-                    <li>✅ الحضور والغياب عن طريق الكودبار</li>
+                     <li>✅ الحضور والغياب عن طريق الكودبار</li>
                     <li>✅ بطاقات التلاميذ</li>
-                    <li>✅ تسجيل التلاميذ في الدروس الشهرية</li>
-                    <li>✅ تسجيل التلاميذ في الدروس اليومية</li>
-                    <li>✅ تطبيق لتسجيل الحضور والغياب </li>
                     <li>✅ حساب أجور الأساتذة</li>
                     <li>✅ دفع أجرة الموظفين</li>
                     <li>✅ ديون الأساتذة</li>
@@ -308,11 +333,14 @@
                     <li>✅ حساب الحصص المتبقية</li>
                     <li>✅ تقارير العمل والدفع</li>
                     <li>✅ دفع فوج مباشر</li>
-                    <li>✅ دفع حقوق الدورات بالفترة</li>
-                    <li>✅ تسجيل في الدورات</li>
                     <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
                     <li>✅ مراقبة قائمة الحضور للأساتذة</li>
                     <li>✅ حساب الفوائد وتحليل الربح</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية فقط</li>
+                    <li>✅ دفع حقوق الدورات بالفترة</li>
+                    <li>✅ تسجيل في الدورات</li>
+                    <li>✅ تسجيل التلاميذ في الدروس اليومية</li
+                    <li>✅ تطبيق لتسجيل الحضور والغياب </li>
                 </ul>
                 <p style="margin-top: 15px; font-weight: bold; color: #444;">🔒 تفعيل مدى الحياة: 35000DA</p>
             </div>
