--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
                     <li>✅ مراقبة قائمة الحضور للأساتذة</li>
                     <li>✅ حساب الفوائد وتحليل الربح</li>
-                    <li>✅ تسجيل التلاميذ في الدروس الشهرية فقط</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية </li>
                     <li>❌ دفع حقوق الدورات بالفترة</li>
                     <li>❌ تسجيل في الدورات</li>
                     <li>❌ تسجيل التلاميذ في الدروس اليومية</li
@@ -282,7 +282,7 @@
                     <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
                     <li>✅ مراقبة قائمة الحضور للأساتذة</li>
                     <li>✅ حساب الفوائد وتحليل الربح</li>
-                    <li>✅ تسجيل التلاميذ في الدروس الشهرية فقط</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية </li>
                     <li>✅ دفع حقوق الدورات بالفترة</li>
                     <li>✅ تسجيل في الدورات</li>
                     <li>❌ تسجيل التلاميذ في الدروس اليومية</li
@@ -309,7 +309,7 @@
                     <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
                     <li>✅ مراقبة قائمة الحضور للأساتذة</li>
                     <li>✅ حساب الفوائد وتحليل الربح</li>
-                    <li>✅ تسجيل التلاميذ في الدروس الشهرية فقط</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية </li>
                     <li>✅ دفع حقوق الدورات بالفترة</li>
                     <li>✅ تسجيل في الدورات</li>
                     <li>✅ تسجيل التلاميذ في الدروس اليومية</li
@@ -336,7 +336,7 @@
                     <li>✅ إمكانية إضافة التلاميذ بالايكسال</li>
                     <li>✅ مراقبة قائمة الحضور للأساتذة</li>
                     <li>✅ حساب الفوائد وتحليل الربح</li>
-                    <li>✅ تسجيل التلاميذ في الدروس الشهرية فقط</li>
+                    <li>✅ تسجيل التلاميذ في الدروس الشهرية </li>
                     <li>✅ دفع حقوق الدورات بالفترة</li>
                     <li>✅ تسجيل في الدورات</li>
                     <li>✅ تسجيل التلاميذ في الدروس اليومية</li
